fixing available openjdk versions in ubuntu xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,8 @@ env:
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=11.0.2
     # Ubuntu Xenial
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERION=8u191-b12-2ubuntu0.16.04.1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=9~b114-0ubuntu1
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=11.0.1+13-3ubuntu1~16.04~ppa1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_201
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
