trying to use only one env variable to manage openJDK/oracleJDK versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,38 +20,37 @@ env:
   matrix:
     # Debian Jessie
     - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=openjdk
-    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=8u171-b11-1~bpo8+1
+    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u171-b11-1~bpo8+1
     - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk
-    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_201
-    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
-    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=11.0.2
+    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_201
+    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_202
+    - DOCKER_IMAGE_BASE=debian:jessie-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
     # Debian Stretch
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=openjdk
-    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=8u181-b13-2~deb9u1
+    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u181-b13-2~deb9u1
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk
-    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_201
-    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
-    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=11.0.2
+    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_201
+    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_202
+    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
     # Ubuntu Xenial
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERION=8u191-b12-2ubuntu0.16.04.1
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=9~b114-0ubuntu1
+    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=openjdk
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u191-b12-2ubuntu0.16.04.1
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk JDK_VERSION=9~b114-0ubuntu1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_201
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=11.0.2
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_201
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_202
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
     # Ubuntu Bionic
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=8u191-b12-0ubuntu0.18.04.1
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=10.0.2+13-1ubuntu0.18.04.4
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk OPEN_JDK_VERSION=11.0.1+13-3ubuntu1~18.04~ppa1
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u191-b12-0ubuntu0.18.04.1
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=10.0.2+13-1ubuntu0.18.04.4
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=11.0.1+13-3ubuntu1~18.04~ppa1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_201
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=1.8.0_202
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk ORACLE_JDK_VERSION=11.0.2
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_201
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_202
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
+
 script:
-  - export DOCKER_IMAGE_BASE=${DOCKER_IMAGE_BASE} 
-  - export OPEN_JDK_VERSION=${OPEN_JDK_VERSION}
-  - export ORACLE_JDK_VERSION=${ORACLE_JDK_VERSION}
   - pipenv run molecule test -s ${JAVA_IMPLEMENTATION}
 
 notifications:
