--- a/molecule/oraclejdk/molecule.yml
+++ b/molecule/oraclejdk/molecule.yml
@@ -20,7 +20,7 @@ provisioner:
     group_vars:
       oraclejdk:
         java_implementation: oraclejdk
-        java_oracle_jdk_version: ${ORACLE_JDK_VERSION:-1.8.0_201}
+        java_oracle_jdk_version: ${JDK_VERSION:-1.8.0_201}
   lint:
     name: ansible-lint
 scenario:
