using java_open_jdk_version to extract java major variable

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 
-java_open_jdk_version_major: "{{ __java_open_jdk_version | regex_search('^([0-9]{1,2})') }}"
+java_open_jdk_version_major: "{{ java_open_jdk_version | regex_search('^([0-9]{1,2})') }}"
 
 # Older versions requires login to be downloaded
 # http://www.oracle.com/technetwork/java/archive-139210.html
