--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -9,12 +9,12 @@
 # Allowing to 'override' variables that are defined using include_vars
 - name: Java | Setting OS specific variables
   set_fact:
-    java_open_jdk_version: "{{ java_open_jdk_version if java_open_jdk_version is defined and java_open_jdk_version is not sameas None else __java_open_jdk_version }}"
-    java_required_repositories_openjdk: "{{ java_required_repositories_openjdk if java_required_repositories_openjdk is defined and java_required_repositories_openjdk is not sameas None else __java_required_repositories_openjdk }}"
-    java_required_libs_openjdk: "{{ java_required_libs_openjdk if java_required_libs_openjdk is defined and java_required_libs_openjdk is not sameas None else __java_required_libs_openjdk }}"
- 
+    java_open_jdk_version: "{{ java_open_jdk_version if java_open_jdk_version is defined and java_open_jdk_version is not sameas None and java_open_jdk_version|length else __java_open_jdk_version }}"
+    java_required_repositories_openjdk: "{{ java_required_repositories_openjdk if java_required_repositories_openjdk is defined and java_required_repositories_openjdk is not sameas None and java_required_repositories_openjdk|length else __java_required_repositories_openjdk }}"
+    java_required_libs_openjdk: "{{ java_required_libs_openjdk if java_required_libs_openjdk is defined and java_required_libs_openjdk is not sameas None and java_required_libs_openjdk|length else __java_required_libs_openjdk }}"
+
 - name: Java | Setting OS specific variables
-  set_fact:   
+  set_fact:
     java_home: "{{ java_open_jdk_home }}"
 
 - name: Java | Add required repositories
