Fixing openjdk8 version in ubuntu bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=1.8.0_202
     - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
     # Ubuntu Xenial
-    - DOCKER_IMAGE_BASE=debian:stretch-slim JAVA_IMPLEMENTATION=openjdk
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u191-b12-2ubuntu0.16.04.1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=openjdk JDK_VERSION=9~b114-0ubuntu1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk
@@ -42,7 +42,7 @@ env:
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JAVA_IMPLEMENTATION=oraclejdk JDK_VERSION=11.0.2
     # Ubuntu Bionic
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk
-    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u191-b12-0ubuntu0.18.04.1
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=8u191-b12-2ubuntu0.18.04.1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=10.0.2+13-1ubuntu0.18.04.4
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=openjdk JDK_VERSION=11.0.1+13-3ubuntu1~18.04~ppa1
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JAVA_IMPLEMENTATION=oraclejdk
