fixing packer template

--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,7 @@ deploy:
     - packer build packer/template.json
   on:
     branch: develop
-    if: |
+    condition: |
       env(DOCKER_IMAGE_BASE) IS present AND \
       env(JAVA_IMPLEMENTATION) IS present AND \
       env(JDK_VERSION) IS present AND \
