--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,18 @@
 ---
 
-- name: Java | Install OpenJDK implementation
-  import_tasks: install_openjdk.yml
-  when: java_implementation == 'openjdk'
+- name: Java | Install OpenJDK implementation, Debian
+  import_tasks: install_openjdk_debian.yml
+  when:
+    - java_implementation == 'openjdk'
+    - ansible_os_family == 'Debian'
+  tags:
+    - install
+
+- name: Java | Install OpenJDK implementation, Redhat
+  import_tasks: install_openjdk_redhat.yml
+  when:
+    - java_implementation == 'openjdk'
+    - ansible_os_family == 'RedHat'
   tags:
     - install
 
