--- a/tasks/install_openjdk_debian.yml
+++ b/tasks/install_openjdk_debian.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Java | Gather OS specific variables
+- name: Java | Gather OS specific variables, Debian
   include_vars: "{{ item }}"
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
