--- a/tasks/install_openjdk_redhat.yml
+++ b/tasks/install_openjdk_redhat.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: Java | Gather OS specific variables
+- name: Java | Gather OS specific variables, Redhat
   include_vars: "{{ item }}"
   with_first_found:
-    - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 # Allowing to 'override' variables that are defined using include_vars
