--- a/vars/CentOS-Core.yml
+++ b/vars/CentOS-Core.yml
@@ -1,7 +1,7 @@
 ---
 
 # OpenJDK implementation
-java_open_jdk_package: java-11-openjdk
+java_open_jdk_package: java-11-openjdk-headless
 java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_version }}-0.el7_6.x86_64
 # java-11-openjdk-11.0.2.7-0.el7_6.x86_64
 
