--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Java | Gather OS specific variables, Redhat
+- name: Java | Gather OS specific variables
   include_vars: "{{ item }}"
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml"
@@ -17,26 +17,38 @@
   set_fact:
     java_home: "{{ java_open_jdk_home }}"
 
-
+- name: Java | Add required repositories
+  apt_repository:
+    repo: "{{ item }}"
+    state: present
+  with_items: "{{ java_required_repositories_openjdk }}"
+  when: ansible_os_family == 'Debian'
 
 - name: Java | Install required libs
-  yum:
+  package:
     name: "{{ java_required_libs_openjdk }}"
     state: present
-    update_cache: true
   until: java_required_libs_installed is succeeded
   register: java_required_libs_installed
 
-- name: Java | Install Java
+- name: Java | Install Java, Debian
+  apt:
+    name: "{{ java_open_jdk_package }}={{ java_open_jdk_version }}"
+    state: present
+    cache_valid_time: 3600
+    update_cache: true
+  until: java_package_installed is succeeded
+  register: java_package_installed
+  when: ansible_os_family == 'Debian'
+
+- name: Java | Install Java, Redhat
   yum:
     name: "{{ java_open_jdk_package }}-{{ java_open_jdk_version }}"
     state: present
     update_cache: true
   until: java_package_installed is succeeded
   register: java_package_installed
-
-
-
+  when: ansible_os_family == 'RedHat'
 
 - name: Java | Update Env
   alternatives:
