--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,7 @@
 
 - name: Java | Install OpenJDK implementation
   include_tasks: install_openjdk.yml
-  when:
-    - java_implementation == 'openjdk'
+  when: java_implementation == 'openjdk'
   tags:
     - install
 
