--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -17,10 +17,23 @@
   set_fact:
     java_home: "{{ java_open_jdk_home }}"
 
-- name: Java | Add required repositories
+# Explanation why:
+# https://www.lucas-nussbaum.net/blog/?p=947
+- name: Java | Disable Jessie's APT check-valid-until
+  lineinfile:
+    line: "Acquire::Check-Valid-Until no;"
+    path: /etc/apt/apt.conf.d/99no-check-valid-until
+    state: present
+    create: true
+  when:
+    - ansible_os_family == 'Debian'
+    - ansible_distribution_major_version == '8'
+
+- name: Java | Add required repositories, Debian
   apt_repository:
     repo: "{{ item }}"
     state: present
+    update_cache: true
   with_items: "{{ java_required_repositories_openjdk }}"
   when: ansible_os_family == 'Debian'
 
@@ -31,22 +44,24 @@
   until: java_required_libs_installed is succeeded
   register: java_required_libs_installed
 
-- name: Java | Setting Java Package Name, Debian
-  set_fact:
-    java_open_jdk_package_name: "{{ java_open_jdk_package }}={{ java_open_jdk_version }}"
-  when: ansible_os_family == 'Debian'
-
-- name: Java | Setting Java Package Name, RedHat
-  set_fact:
-    java_open_jdk_package_name: "{{ java_open_jdk_package }}-{{ java_open_jdk_version }}"
-  when: ansible_os_family == 'RedHat'
-
 - name: Java | Install Java, Debian
-  package:
-    name: "{{ java_open_jdk_package_name }}"
+  apt:
+    name: "{{ java_open_jdk_package }}={{ java_open_jdk_version }}"
     state: present
+    update_cache: true
+    cache_valid_time: 3600
   until: java_package_installed is succeeded
   register: java_package_installed
+  when: ansible_os_family == 'Debian'
+
+- name: Java | Install Java, RedHat
+  yum:
+    name: "{{ java_open_jdk_package }}-{{ java_open_jdk_version }}"
+    state: present
+    update_cache: true
+  until: java_package_installed is succeeded
+  register: java_package_installed
+  when: ansible_os_family == 'RedHat'
 
 - name: Java | Update Env
   alternatives:
@@ -71,4 +86,4 @@
     executable: /bin/bash
   changed_when: false
   tags:
-    skip_ansible_lint
+    - skip_ansible_lint
