--- a/vars/Ubuntu-16.yml
+++ b/vars/Ubuntu-16.yml
@@ -2,7 +2,9 @@
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 # https://packages.ubuntu.com/xenial/openjdk-9-jdk
-__java_open_jdk_version: "9~b114-0ubuntu1"
+__java_open_jdk_version: "11.0.4+9-1ubuntu1~16.04.1"
 
-__java_required_repositories_openjdk: []
+
+__java_required_repositories_openjdk:
+  - "ppa:openjdk-r/ppa"
 __java_required_libs_openjdk: []
