added ability to use "8.x" or "11.x" for java_open_jdk_version

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
     # https://packages.debian.org/jessie-backports/openjdk-8-jdk-headless
     - DOCKER_IMAGE_BASE=debian:jessie-slim
       JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=8.x
       DOCKER_TAG_TO_PUBLISH=8-jessie-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=debian:jessie-slim
@@ -34,12 +35,18 @@ env:
     # https://packages.debian.org/stretch/openjdk-8-jdk-headless
     - DOCKER_IMAGE_BASE=debian:stretch-slim
       JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=8.x
       DOCKER_TAG_TO_PUBLISH=8-stretch-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=debian:stretch-slim
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=8u212-b03-2~deb9u1
       DOCKER_TAG_TO_PUBLISH=8u212-stretch-${JDK_IMPLEMENTATION}-headless
+
+    - DOCKER_IMAGE_BASE=debian:stretch-slim
+      JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=11.x
+      DOCKER_TAG_TO_PUBLISH=11-stretch-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=debian:stretch-slim
       JDK_IMPLEMENTATION=openjdk
@@ -51,7 +58,8 @@ env:
     # https://packages.ubuntu.com/xenial/openjdk-9-jdk
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial
       JDK_IMPLEMENTATION=openjdk
-      DOCKER_TAG_TO_PUBLISH=11-xenial-${JDK_IMPLEMENTATION}-headless
+      JDK_VERSION=8.x
+      DOCKER_TAG_TO_PUBLISH=8-xenial-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial
       JDK_IMPLEMENTATION=openjdk
@@ -60,20 +68,31 @@ env:
 
     - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial
       JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=11.x
+      DOCKER_TAG_TO_PUBLISH=11-xenial-${JDK_IMPLEMENTATION}-headless
+
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial
+      JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=11.0.4+9-1ubuntu1~16.04.1
-      DOCKER_TAG_TO_PUBLISH=9b114-xenial-${JDK_IMPLEMENTATION}-headless
+      DOCKER_TAG_TO_PUBLISH=11.0.4-xenial-${JDK_IMPLEMENTATION}-headless
 
     # Ubuntu Bionic/OpenJDK
     # https://packages.ubuntu.com/bionic/openjdk-8-jdk
     # https://launchpad.net/ubuntu/+source/openjdk-lts
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic
       JDK_IMPLEMENTATION=openjdk
-      DOCKER_TAG_TO_PUBLISH=11-bionic-${JDK_IMPLEMENTATION}-headless
+      JDK_VERSION=8.x
+      DOCKER_TAG_TO_PUBLISH=8-bionic-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic
       JDK_IMPLEMENTATION=openjdk
       JDK_VERSION=8u212-b03-0ubuntu1.18.04.1
       DOCKER_TAG_TO_PUBLISH=8u212-bionic-${JDK_IMPLEMENTATION}-headless
+
+    - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic
+      JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=11.x
+      DOCKER_TAG_TO_PUBLISH=11-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic
       JDK_IMPLEMENTATION=openjdk
@@ -83,6 +102,7 @@ env:
     # CentOS 7/OpenJDK
     - DOCKER_IMAGE_BASE=amd64/centos:7.6.1810
       JDK_IMPLEMENTATION=openjdk
+      JDK_VERSION=11.x
       DOCKER_TAG_TO_PUBLISH=11-centos7-${JDK_IMPLEMENTATION}-headless
 
     - DOCKER_IMAGE_BASE=amd64/centos:7.6.1810
